Ajusta fluxo de credenciais e corrige testes 70
